logging xy values from a joystick. Sending the values to http server to display on website.

--- a/main/webpage/index.html
+++ b/main/webpage/index.html
@@ -28,5 +28,14 @@
 	</div>
 	<hr>
 		
+	<div id="JoyStick">
+		<h2>Joy Stick Readings</h2>
+		<label for="x_coordinate">X Coordinate: </label>
+		<div id="x_coordinate"></div>
+		<label for="y_coordinate">Y Coordinate: </label>
+		<div id="y_coordinate"></div>
+	</div>
+	<hr>
+		
 	</body>
 <html>
